Ajustes de Estilo

--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
+
+  <!--  Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <title>Chatbot Furia</title>
 </head>
 <body>
   <main id="chat-bot">
     <header id="chat-bot-header">
-      <img src=''>
-      <h1 id="chat-bot-title">ChatBot</h1>
-      <i id="chat-bot-logo"></i>
+      <div id="chat-bot-header-content">
+        <img id="chat-bot-logo" src="imgs/logo-furia.png">
+        <h1 id="chat-bot-title">ChatBot</h1>
+      </div>
+      <i id='chat-bot-header-close' class="fa-solid fa-angle-down"></i>
     </header>
     <div id="chat-bot-content"></div>
     <footer id="chat-bot-footer">
@@ -22,5 +30,6 @@
       </div>
     </footer>
   </main>
+  <script src="index.js"></script>
 </body>
 </html>
