--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
       </div>
       <i id='chat-bot-header-close' class="fa-solid fa-angle-down"></i>
     </header>
-    <div id="chat-bot-content"></div>
+    <div id="chat-bot-content">
+      <div class="bot-message">Essa é uma mensagem de teste</div>
+      <div class="user-message">Essa é um resposta para fins de teste</div>
+    </div>
     <footer id="chat-bot-footer">
       <div id='message-box'>
-        <input type="text" id="user-message">
+        <input type="text" id="user-input">
         <button id="send-arquive"></button>
         <button id="send-message"></button>
       </div>
