Começando a implementar as funcionalidades da página/chat

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </div>
     </footer>
   </main>
+  <button id='chat-popup'></button>
   <script src="script.js"></script>
 </body>
 </html>
