Implementação de funcionalidades iniciais no ChatBot

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div id="chat-bot-content">
       <div id="bot-message-box">
         <img id='bot-message-img' src="imgs/logo-furia.png">
-        <div class="bot-message">Essa é uma mensagem de teste</div>
+        <div class="bot-message">Hello, I'm a ChatBot. How can I help you?</div>
       </div>
-      <div class="user-message">Essa é um resposta para fins de teste</div>
+      <!-- <div class="user-message">Essa é um resposta para fins de teste</div> -->
     </div>
     <footer id="chat-bot-footer">
       <div id='message-box'>
